<resources>
    <string name="app_name">CodeHSU</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_fragment">LoginFragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="student">Student</string>
    <string name="business">Business</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title">Title</string>
    <string name="pitch">Pitch</string>
    <string name="full_description">Full Description</string>
    <string name="difficulty">Difficulty</string>
    <string name="compensation">Compensation</string>
    <string name="create_a_new_post">Create a new post!</string>
    <string name="submit">Submit</string>
    <string name="tags_comma_separated">Tags (comma separated)</string>
    <string name="sign_out">Sign Out</string>
    <string name="codehsu">CodeHSU</string>
</resources>
