<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Posts.AddPostActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="CodeHSU"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#2e7d32"/>

    <TextView
        android:id="@+id/tvAddPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_post"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="75dp"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tvAddPost"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/etPitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pitch"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/etTitle"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/full_description"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/etPitch"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/difficulty"
        android:inputType="text"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="276dp"
        app:layout_constraintTop_toBottomOf="@id/etDescription"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/etTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tags_comma_separated"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/etDifficulty"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/etCompensation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/compensation"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/etTags"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/etCompensation"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"/>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation_add_post"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_bottom_navigation"
        android:background="#005005"
        app:itemIconTint="#ffffff"
        />

</android.support.constraint.ConstraintLayout>